...
        }
    }
    
    func createFinalResultsAlerModel() -> AlertModel {
        storeStatistic()
        let alertModel = AlertModel(
            title: "Этот раунд окончен!",
            message: quizResultText(),
            buttonText: "Сыграть еще раз!",
            completion: { [weak self] in guard let self else { return }
                self.restartGame()
            })
        return alertModel
...
